--- a/NagiPicts/skin-cover.html
+++ b/NagiPicts/skin-cover.html
@@ -18,8 +18,8 @@
  <link rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
  [[!-- NagiMemo共通スタイル + Picts固有スタイル --]]
- <link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/mainP26013015">
- <link rel="stylesheet" href="[[PATH:SKINDIR]]picts-styleP26013015">
+ <link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?2013015">
+ <link rel="stylesheet" href="[[PATH:SKINDIR]]picts-style.css?2013015">
  [[OGP]]
 </head>
 
@@ -66,9 +66,9 @@
  [[JS:LIGHTBOX:JQ]]
 
  <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
- <script src="[[PATH:SKINDIR]]../skin-nagimemo/common-uiP26013015"></script>
+ <script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2013015"></script>
  [[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
- <script src="[[PATH:SKINDIR]]../skin-nagimemo/shareP26013015"></script>
+ <script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?2013015"></script>
 </body>
 
 </html>
