--- a/skin-nagi_sitemap/skin-cover.html
+++ b/skin-nagi_sitemap/skin-cover.html
@@ -18,9 +18,9 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	[[!-- NagiMemo共通スタイル (ベース) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/mainP26013015">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]../skin-nagimemo/main.css?2013015">
 	[[!-- Sitemap固有スタイル (オーバーライド) --]]
-	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overridesP26013015">
+	<link rel="stylesheet" href="[[PATH:SKINDIR]]sitemap-overrides.css?2013015">
 	[[OGP]]
 </head>
 
@@ -90,10 +90,10 @@
 	[[!-- Twemoji CDN 利用のためライセンス表記免除 --]]
 	<script src="https://cdn.jsdelivr.net/npm/@twemoji/api@14.1.0/dist/twemoji.min.js"></script>
 
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profileP26013015"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/sidebar-profile.js?2013015"></script>
 	[[INCLUDE:skin-nagimemo/modules/credits-modal.html]]
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-uiP26013015"></script>
-	<script src="[[PATH:SKINDIR]]../skin-nagimemo/shareP26013015"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/common-ui.js?2013015"></script>
+	<script src="[[PATH:SKINDIR]]../skin-nagimemo/share.js?2013015"></script>
 	[[JS:LIGHTBOX:JQ]]
 </body>
 
